// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new request body has correct commands 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6707",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$boolean",
        "name": "",
        "shapeId": "shape_6708",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6709",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6710",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$object",
        "name": "",
        "shapeId": "shape_6716",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$optional",
        "name": "",
        "shapeId": "shape_6712",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$optionalInner",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6710",
              },
            },
            "shapeId": "shape_6712",
          },
        },
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6711",
        "name": "dueDate",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6711",
            "shapeId": "shape_6712",
          },
        },
        "shapeId": "shape_6716",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6713",
        "name": "id",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6713",
            "shapeId": "shape_6709",
          },
        },
        "shapeId": "shape_6716",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6714",
        "name": "isDone",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6714",
            "shapeId": "shape_6708",
          },
        },
        "shapeId": "shape_6716",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6715",
        "name": "task",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6715",
            "shapeId": "shape_6707",
          },
        },
        "shapeId": "shape_6716",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$list",
        "name": "",
        "shapeId": "shape_6717",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$listItem",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6716",
              },
            },
            "shapeId": "shape_6717",
          },
        },
      },
    },
    Object {
      "AddRequest": Object {
        "httpMethod": "GET",
        "pathId": "path_it2OyjUysW",
        "requestId": "request_6718",
      },
    },
    Object {
      "SetRequestBodyShape": Object {
        "bodyDescriptor": Object {
          "httpContentType": "application/json",
          "isRemoved": false,
          "shapeId": "shape_6717",
        },
        "requestId": "request_6718",
      },
    },
  ],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "8de10f26b6ef26ca",
      "getJsonBodyToPreview": [Function],
      "location": Object {
        "inRequest": Object {
          "contentType": "application/json",
          "requestId": undefined,
        },
        "inResponse": undefined,
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "request observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "allowsExpand": false,
        "assertion": Array [],
        "ignoreRule": Object {
          "diffHash": "8de10f26b6ef26ca",
          "newBodyInRequest": Object {
            "contentType": "application/json",
            "requestId": undefined,
          },
        },
        "interactionPointers": Array [
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "application/json Request",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "Request",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`new response body has correct commands 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6731",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$boolean",
        "name": "",
        "shapeId": "shape_6732",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6733",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6734",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$object",
        "name": "",
        "shapeId": "shape_6740",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$optional",
        "name": "",
        "shapeId": "shape_6736",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$optionalInner",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6734",
              },
            },
            "shapeId": "shape_6736",
          },
        },
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6735",
        "name": "dueDate",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6735",
            "shapeId": "shape_6736",
          },
        },
        "shapeId": "shape_6740",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6737",
        "name": "id",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6737",
            "shapeId": "shape_6733",
          },
        },
        "shapeId": "shape_6740",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6738",
        "name": "isDone",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6738",
            "shapeId": "shape_6732",
          },
        },
        "shapeId": "shape_6740",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6739",
        "name": "task",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6739",
            "shapeId": "shape_6731",
          },
        },
        "shapeId": "shape_6740",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$list",
        "name": "",
        "shapeId": "shape_6741",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$listItem",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6740",
              },
            },
            "shapeId": "shape_6741",
          },
        },
      },
    },
    Object {
      "AddResponseByPathAndMethod": Object {
        "httpMethod": "GET",
        "httpStatusCode": 200,
        "pathId": "path_it2OyjUysW",
        "responseId": "response_6742",
      },
    },
    Object {
      "SetResponseBodyShape": Object {
        "bodyDescriptor": Object {
          "httpContentType": "application/json",
          "isRemoved": false,
          "shapeId": "shape_6741",
        },
        "responseId": "response_6742",
      },
    },
  ],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "e958234709591c5f",
      "getJsonBodyToPreview": [Function],
      "location": Object {
        "inRequest": undefined,
        "inResponse": Object {
          "contentType": "application/json",
          "responseId": undefined,
          "statusCode": 200,
        },
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "response with",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "allowsExpand": false,
        "assertion": Array [],
        "ignoreRule": Object {
          "diffHash": "e958234709591c5f",
          "newBodyInRequest": undefined,
        },
        "interactionPointers": Array [
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "200 application/json Response",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "Response",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`spec with paths, and new bodies 1`] = `Array []`;
